objects/TAV4__Geo_Unit_Assignment__c.object
<CustomObject>
    <description>Assignments of Geo Units to sales areas, per alignment.</description>
    <fields>
        <fullName>TAV4__Alignment__c</fullName>
        <label>Alignment</label>
        <referenceTo>TAV4__Alignment__c</referenceTo>
        <relationshipName>Geo_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TAV4__Area_Description__c</fullName>
        <formula>TAV4__Geo_Unit__r.TAV4__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAV4__Code__c</fullName>
        <formula>TAV4__Geo_Unit__r.TAV4__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAV4__Geo_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geo Unit</label>
        <referenceTo>TAV4__Geo_Unit__c</referenceTo>
        <relationshipLabel>Geo Unit Assignments</relationshipLabel>
        <relationshipName>Geo_Unit_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAV4__Sales_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area</label>
        <referenceTo>TAV4__Sales_Area__c</referenceTo>
        <relationshipName>Geo_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geo Unit Assignment</label>
    <listViews>
        <fullName>TAV4__All</fullName>
        <columns>TAV4__Alignment__c</columns>
        <columns>TAV4__Code__c</columns>
        <columns>TAV4__Sales_Area__c</columns>
        <columns>TAV4__Area_Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GA-{0000000}</displayFormat>
        <label>Geo Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geo Unit Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TAV4__Alignment_Container_Check</fullName>
        <active>true</active>
        <description>Make sure the unit is from the container associated with the alignment</description>
        <errorConditionFormula>TAV4__Alignment__r.TAV4__Geo_Container__c !=  TAV4__Geo_Unit__r.TAV4__Geo_Container__c</errorConditionFormula>
        <errorDisplayField>TAV4__Geo_Unit__c</errorDisplayField>
        <errorMessage>You must select a geo unit from the container associated with the alignment.</errorMessage>
    </validationRules>
</CustomObject>